<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:layout_width="match_parent"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    android:layout_margin="5dp"
                                    card_view:cardCornerRadius="5dp"
                                    card_view:cardElevation="10dp"
                                    android:layout_height="300dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="358dp">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:padding="10dp"
                card_view:srcCompat="@android:color/holo_red_light"/>

        <TextView
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/year"
                android:id="@+id/yearTxt"
                android:padding="5dp"
                android:textColor="@color/colorAccent"
                android:layout_below="@+id/imageView"
                android:layout_marginLeft="12dp" android:layout_marginTop="1dp"
                android:layout_marginStart="12dp" android:layout_toStartOf="@+id/volumeDescTxt"
                android:layout_marginRight="43dp" android:layout_marginEnd="43dp"
                android:layout_toLeftOf="@+id/volumeDescTxt" android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/volumeDesc"
                android:id="@+id/volumeDescTxt"
                android:padding="2dp"
                android:textStyle="italic"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true" android:layout_alignParentRight="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/volume"
                android:id="@+id/volumeTxt"
                android:padding="2dp"
                android:textStyle="italic"
                android:layout_alignParentRight="true"
                android:layout_marginRight="9dp"
                android:layout_marginTop="9dp" android:layout_below="@+id/volumeDescTxt"/>

        <TextView
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/status"
                android:id="@+id/statusTxt"
                android:padding="5dp"
                android:layout_marginTop="1dp" android:layout_below="@+id/yearTxt"
                android:layout_alignParentStart="true" android:layout_marginLeft="13dp"
                android:layout_marginStart="13dp"
                android:layout_alignParentLeft="true"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/highYear"
                android:id="@+id/highYearTxt"
                android:padding="5dp"
                android:layout_alignParentStart="true" android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_alignParentLeft="true" android:layout_marginTop="0dp"
                android:layout_alignParentTop="true" android:visibility="invisible"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lowYear"
                android:id="@+id/lowYearTxt"
                android:padding="5dp"
                android:layout_alignParentEnd="true" android:layout_alignParentRight="true"
                android:layout_marginRight="0dp" android:layout_marginEnd="0dp" android:layout_marginTop="0dp"
                android:layout_alignParentTop="true" android:visibility="invisible"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>